ajustes nos cards bg e centralização do botão

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
         <div class="banner-container">
             <div class="bg--banner">
                 <img class="img--bg" src="./img/pst16-capa-1740x615.jpg" alt="img escavadeira">
-                <button class="banner-button"><a href="#card-main">Explorar</a></button>
+                    <button class="banner-button"><a href="#cards">Explorar</a></button>
             </div>
         </div>
 
         <!-- cards -->
-        <h1>Equipamentos</h1>
+        <h1 class="cards-tittle">Locação de Máquinas e Equipamentos</h1>
         
         <section class="cards">
             <div class="card" style="width: 25rem;">
@@ -87,7 +87,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Retroescavadeira</h5>
                     <p class="card-text">Retroescavadeiras são equipamentos compactos, o que as torna bastante versáteis e utilizáveis na maioria das aplicações, cumprindo uma ampla variedade de tarefas: construção, pequenas demolições, transporte leve de materiais de construção, fornecimento de equipamento para construção, pequenas escavações, paisagismo, .</p>
-                    <a href="#" class="btn btn-primary">Visitar</a>
+                    <a href="#" class="btn btn-primary">Saiba mais</a>
                 </div>
             </div>
 
@@ -96,7 +96,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Escavadeira</h5>
                     <p class="card-text">A escavadeira é um equipamento utilizado para escavar e mover grandes quantidades de material, como terra, pedras e afins — representando, portanto, algo fundamental à construção civil.</p>
-                    <a href="#" class="btn btn-primary">Visitar</a>
+                    <a href="#" class="btn btn-primary">Saiba mais</a>
                 </div>
             </div>
 
@@ -105,7 +105,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Miniescavadeira</h5>
                     <p class="card-text">A Mini Escavadeira é um equipamento industrial de pequeno porte, o seu tamanho facilita na praticidade em diversos serviços, até mesmo em terrenos acidentados. Sua utilização auxilia na preparação do solo, escavação e remoção de entulho em locais de difícil alcance.</p>
-                    <a href="#" class="btn btn-primary">Visitar</a>
+                    <a href="#" class="btn btn-primary">Saiba mais</a>
                 </div>
             </div>
 
@@ -114,7 +114,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Carregadeira</h5>
                     <p class="card-text">Muito utilizadas em diversos segmentos, as pás carregadeiras são máquinas capazes de carregar materiais como areia, brita, terra, entulhos e minérios. Potentes e versáteis, são excelentes para trabalhos em grandes e pequenas áreas.</p>
-                    <a href="#" class="btn btn-primary">Visitar</a>
+                    <a href="#" class="btn btn-primary">Saiba mais</a>
                 </div>
             </div>
 
@@ -123,7 +123,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Minicarregadeira</h5>
                     <p class="card-text">A mini carregadeira é um trator super compacto, dotato de uma pá carregadeira em sua fronte. É utilizada na construção civil para movimentação ou remoção de materiais, normalmente em lugares com restrição de espaço. A mini carregadeira tem uma capacidade operacional que varia de 300Kg à 1,5T dependendo do modelo.</p>
-                    <a href="#" class="btn btn-primary">Visitar</a>
+                    <a href="#" class="btn btn-primary">Saiba mais</a>
                 </div>
             </div>
 
@@ -132,7 +132,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Motoniveladora</h5>
                     <p class="card-text">As motoniveladoras são capazes de deslocar lateralmente grandes quantidades de materiais e para arrumação de superfícies e terrenos inclinados. Além da lâmina, o maquinário tem escarificadores que servem para lidar com superfícies mais densas, misturando e reintegrando o novo material.</p>
-                    <a href="#" class="btn btn-primary">Visitar</a>
+                    <div class="card-button"><a href="#" class="btn btn-primary">Saiba mais</a></div>
                 </div>
             </div>
             
