inserir logo no modal logiin

--- a/index copy.html
+++ b/index copy.html
@@ -22,10 +22,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(Página atual)</span></a>
-                    <a class="nav-item nav-link" href="#">Quem somos</a>
-                    <a class="nav-item nav-link" href="#">Equipamentos</a>
-                    <a class="nav-item nav-link" href="#">Cotação</a>
+                    <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(Página atual)</span></a>
+                    <a class="nav-item nav-link" href="./Quem Somos.html">Quem somos</a>
+                
+                    <a class="nav-item nav-link" href="./Cotação.html">Cotação</a>
                 </div>
             </div>
 
@@ -39,6 +39,7 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
+                            <div class="logo-login"><img width="100%" src="./img/AMC LOCAÇÃO_SOLTO.jpg" alt=""></div>
                             <h5 class="modal-title" id="TituloModalCentralizado">LOGIN</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
                             <span aria-hidden="true">&times;</span>
@@ -70,7 +71,7 @@
     </header>
 
     <footer class="btn btn-primary">
-        <span class="footer-text">Desenvolvido por Luiz Guerreiro</span>
+        <span class="footer-text">Desenvolvido por Luiz Guerreiro em 2022</span>
         <a class="footer-lnk" href="https://www.linkedin.com/in/luiz-fernando-guerreiro/" target="_blank"><img class="footer-img" src="./img/icons8-linkedin-circundado-48.png" alt="icone Linkedin"></a>
         <a class="footer-link" href="https://github.com/lfbguerreiro" target="_blank"><img class="footer-img" src="./img/icons8-github-50.png" alt="icone Github"></a>
     </footer>
