--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+                <img src="./img/AMC LOCAÇÃO_SOLTO.jpg" width="130" height="50" alt="Logo AMC">
             </a>
             <a class="navbar-brand" href="#">AMC LOCAÇÃO</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
@@ -22,10 +22,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(Página atual)</span></a>
-                    <a class="nav-item nav-link" href="#">Quem somos</a>
-                    <a class="nav-item nav-link" href="#">Equipamentos</a>
-                    <a class="nav-item nav-link" href="#">Cotação</a>
+                    <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(Página atual)</span></a>
+                    <a class="nav-item nav-link" href="./Quem Somos.html">Quem somos</a>
+                    <a class="nav-item nav-link" href="#cards-tittle">Equipamentos</a>
+                    <a class="nav-item nav-link" href="./Cotação.html">Cotação</a>
                 </div>
             </div>
 
@@ -39,6 +39,7 @@
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
                         <div class="modal-header">
+                            <div class="logo-login"><img width="100%" src="./img/AMC LOCAÇÃO_SOLTO.jpg" alt=""></div>
                             <h5 class="modal-title" id="TituloModalCentralizado">LOGIN</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
                             <span aria-hidden="true">&times;</span>
@@ -79,7 +80,7 @@
         </div>
 
         <!-- cards -->
-        <h1 class="cards-tittle">Locação de Máquinas e Equipamentos</h1>
+        <h1 class="cards-tittle" id="cards-tittle">Locação de Máquinas e Equipamentos</h1>
         
         <section class="cards">
             <div class="card" style="width: 25rem;">
@@ -87,7 +88,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Retroescavadeira</h5>
                     <p class="card-text">Retroescavadeiras são equipamentos compactos, o que as torna bastante versáteis e utilizáveis na maioria das aplicações, cumprindo uma ampla variedade de tarefas: construção, pequenas demolições, transporte leve de materiais de construção, fornecimento de equipamento para construção, pequenas escavações, paisagismo, .</p>
-                    <a href="#" class="btn btn-primary">Saiba mais</a>
+                    <div class="card-button"><a href="#" class="btn btn-primary">Saiba mais</a></div>
                 </div>
             </div>
 
@@ -96,7 +97,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Escavadeira</h5>
                     <p class="card-text">A escavadeira é um equipamento utilizado para escavar e mover grandes quantidades de material, como terra, pedras e afins — representando, portanto, algo fundamental à construção civil.</p>
-                    <a href="#" class="btn btn-primary">Saiba mais</a>
+                    <div class="card-button"><a href="#" class="btn btn-primary">Saiba mais</a></div>
                 </div>
             </div>
 
@@ -105,7 +106,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Miniescavadeira</h5>
                     <p class="card-text">A Mini Escavadeira é um equipamento industrial de pequeno porte, o seu tamanho facilita na praticidade em diversos serviços, até mesmo em terrenos acidentados. Sua utilização auxilia na preparação do solo, escavação e remoção de entulho em locais de difícil alcance.</p>
-                    <a href="#" class="btn btn-primary">Saiba mais</a>
+                    <div class="card-button"><a href="#" class="btn btn-primary">Saiba mais</a></div>
                 </div>
             </div>
 
@@ -114,7 +115,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Carregadeira</h5>
                     <p class="card-text">Muito utilizadas em diversos segmentos, as pás carregadeiras são máquinas capazes de carregar materiais como areia, brita, terra, entulhos e minérios. Potentes e versáteis, são excelentes para trabalhos em grandes e pequenas áreas.</p>
-                    <a href="#" class="btn btn-primary">Saiba mais</a>
+                    <div class="card-button"><a href="#" class="btn btn-primary">Saiba mais</a></div>
                 </div>
             </div>
 
@@ -123,7 +124,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Minicarregadeira</h5>
                     <p class="card-text">A mini carregadeira é um trator super compacto, dotato de uma pá carregadeira em sua fronte. É utilizada na construção civil para movimentação ou remoção de materiais, normalmente em lugares com restrição de espaço. A mini carregadeira tem uma capacidade operacional que varia de 300Kg à 1,5T dependendo do modelo.</p>
-                    <a href="#" class="btn btn-primary">Saiba mais</a>
+                    <div class="card-button"><a href="./miniicarregadeira.html" class="btn btn-primary">Saiba mais</a></div>
                 </div>
             </div>
 
@@ -141,7 +142,7 @@
     </main>
 
     <footer class="btn btn-primary">
-        <span class="footer-text">Desenvolvido por Luiz Guerreiro</span>
+        <span class="footer-text">Desenvolvido por Luiz Guerreiro em 2022</span>
         <a class="footer-lnk" href="https://www.linkedin.com/in/luiz-fernando-guerreiro/" target="_blank"><img class="footer-img" src="./img/icons8-linkedin-circundado-48.png" alt="icone Linkedin"></a>
         <a class="footer-link" href="https://github.com/lfbguerreiro" target="_blank"><img class="footer-img" src="./img/icons8-github-50.png" alt="icone Github"></a>
     </footer>
