--- a/miniicarregadeira.html
+++ b/miniicarregadeira.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>AMC Minicarregadeira</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -22,8 +22,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link " href="./index.html">Home <span class="sr-only">(Página atual)</span></a>
-                    <a class="nav-item nav-link active" href="./Quem Somos.html">Quem somos</a>
+                    <a class="nav-item nav-link active" href="./index.html">Home <span class="sr-only">(Página atual)</span></a>
+                    <a class="nav-item nav-link" href="./Quem Somos.html">Quem somos</a>
                 
                     <a class="nav-item nav-link" href="./Cotação.html">Cotação</a>
                 </div>
@@ -71,10 +71,16 @@
     </header>
 
     <main>
-        <h1>Quem Somos</h1>
-        <img src="" alt="">
-        <p>"EMPRESA BAIANA FUNDADA EM 05/2000, QUE ATUA NO MERCADO BAHIANO DE LOCAÇÃO(RENTAL) DE EQUIPAMENTOS PESADOS PARA CONSTRUÇÃO CIVIL, INDUSTRIA, IRRIGAÇÃO, RESIDOS E MOVIMENTAÇÃO DE CARGAS EM GERAL. ATUANDO PRINCIPALMENTE NA BAHIA, LOCANDO RETROESCAVADEIRAS, MINICARREEGADEIRAS, MINIESCAVADEIRAS PA CARREGADEIRA, ESCAVADEIRAS HIDRÁULICAS, ROMPEDOR HIDRÁULICO, VASSOURAS HIDRÁULICAS, PERFURATRIZ E OUTROS. A MAIS DE 20 ANOS NO MERCADO, DISPOMOS DE EXPERIENCIA EM DIVERSAS OPERAÇOES TAIS COMO: , LIMPEZA E TERRAPLENAGEM DE TERRENOS, SERVIÇOS DE MACRO E MICRO DRENAGEM, INRIGAÇÃO, RECICLAGEM DE RESIDUO, CARREGAMENTO DE MATERIAS PARA PRODUÇÃO INDUSTRIAL, CARREGAMENTO DE MATERIAS EM OPERAÇÕES PORTUARIAS E ETC"</p>
-        
+        <section>
+            <h1>Minicarregadeira</h1>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo praesentium molestiae, possimus dolor libero ipsam consectetur eos optio pariatur dolorum odit incidunt voluptatibus nam ex eaque laboriosam repellat. Fugiat, praesentium?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus sed ab itaque cumque vero, quibusdam commodi quod iure labore, consequatur necessitatibus eum omnis exercitationem nemo praesentium optio, cum alias consectetur. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut maiores quia dolor deserunt facilis ipsum, rerum atque nisi odit temporibus ratione unde accusamus, consequuntur nemo. Similique sapiente beatae repellendus facilis?Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem vitae odit blanditiis suscipit at iste quibusdam, officia doloremque dicta, sequi eius. Facilis, quod sapiente doloribus voluptates obcaecati officiis natus vero?</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ea cupiditate vel et consequuntur illum laboriosam sint corporis accusantium vitae, dolorum nostrum magni voluptatibus sapiente aliquam itaque sed molestiae exercitationem sunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic atque dignissimos dolor ipsam optio sunt tempore praesentium sed vero nobis suscipit, expedita laboriosam dolore doloribus distinctio ad eaque quis error?</p>
+        </section>
+
+        <section>
+            <h3>Veja o vídeo...</h3>
+            <div><iframe width="560" height="315" src="https://www.youtube.com/embed/HcKviCRDZy0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        </section>
     </main>
 
     <footer class="btn btn-primary">
