--- a/index.html
+++ b/index.html
@@ -72,12 +72,20 @@
 
     <main>
         
-        <div class="banner-container">
+        <!-- banner -->
+        <!-- <div class="banner-container">
             <div class="bg--banner">
                 <img class="img--bg" src="./img/pst16-capa-1740x615.jpg" alt="img escavadeira">
                     <button class="banner-button"><a href="#cards">Explorar</a></button>
             </div>
-        </div>
+        </div> -->
+
+        <section class="banner-img" id="img01">
+            <h1 class="banner-tittle">AMC Locação de Equipamentos</h1>
+            <p class="banner-text">Estamos sempre prontos para te atender</p>
+            <button type="button" class="btn btn-primary btn-lg"><a href="##cards-tittle">Explorar</a></button>
+
+        </section>
 
         <!-- cards -->
         <h1 class="cards-tittle" id="cards-tittle">Locação de Máquinas e Equipamentos</h1>
