--- a/Quem Somos.html
+++ b/Quem Somos.html
@@ -14,7 +14,7 @@
    
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+                <img src="./img/AMC LOCAÇÃO_SOLTO.jpg" width="130" height="50" alt="Logo AMC">
             </a>
             <a class="navbar-brand" href="#">AMC LOCAÇÃO</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
@@ -71,10 +71,14 @@
     </header>
 
     <main>
-        <h1>Quem Somos</h1>
-        <img src="" alt="">
-        <p>"EMPRESA BAIANA FUNDADA EM 05/2000, QUE ATUA NO MERCADO BAHIANO DE LOCAÇÃO(RENTAL) DE EQUIPAMENTOS PESADOS PARA CONSTRUÇÃO CIVIL, INDUSTRIA, IRRIGAÇÃO, RESIDOS E MOVIMENTAÇÃO DE CARGAS EM GERAL. ATUANDO PRINCIPALMENTE NA BAHIA, LOCANDO RETROESCAVADEIRAS, MINICARREEGADEIRAS, MINIESCAVADEIRAS PA CARREGADEIRA, ESCAVADEIRAS HIDRÁULICAS, ROMPEDOR HIDRÁULICO, VASSOURAS HIDRÁULICAS, PERFURATRIZ E OUTROS. A MAIS DE 20 ANOS NO MERCADO, DISPOMOS DE EXPERIENCIA EM DIVERSAS OPERAÇOES TAIS COMO: , LIMPEZA E TERRAPLENAGEM DE TERRENOS, SERVIÇOS DE MACRO E MICRO DRENAGEM, INRIGAÇÃO, RECICLAGEM DE RESIDUO, CARREGAMENTO DE MATERIAS PARA PRODUÇÃO INDUSTRIAL, CARREGAMENTO DE MATERIAS EM OPERAÇÕES PORTUARIAS E ETC"</p>
-        
+        <h1 class="qs-tittle">Quem Somos</h1>
+        <div class="qs-img"><img src="./img/CIMG0012.JPG" alt="Retroescavadeira">
+            <section class="qs-content">
+                <p>"A AMC foi fundada em maio de 2000, comemorando este ano 22 anos de atuação no mercado baiano. O nome da empresa foi insirado nas iniciais do pai e inspirador para o negócio como forma de homenagea-lo. </p>
+                <p> Desde o início a AMC atua no mercado de Rental (Locação) de equipamentos pesados para a Construção Civil, Indústria, Agricultura, Resíduos e movimentação de cargas em geral.</p>
+                <p> Atuando principalmente na Bahia, oferece ao mercado equipamentos como retroescavadeiras, miniicarregadeiras, miniescavadeiras, pá carregadeira, escavadeiras hidráulicas, rompedores hidráulicos, vassouras hidráulicas, perfuratriz, dentre outros. Já participamos do planejamento e execção de diversos projetos, como: terraplanagem de grandes áreas, micro e macro drenagem, irrigação, carregamento em operação portuária e muito mais. Para saber mais, entre em contato com a gente.</p>
+            </section>
+        </div>
     </main>
 
     <footer class="btn btn-primary">
