--- a/miniicarregadeira.html
+++ b/miniicarregadeira.html
@@ -14,7 +14,7 @@
    
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="#">
-                <img src="/docs/4.1/assets/brand/bootstrap-solid.svg" width="30" height="30" alt="">
+                <img src="./img/AMC LOCAÇÃO_SOLTO.jpg" width="130" height="50" alt="Logo AMC">
             </a>
             <a class="navbar-brand" href="#">AMC LOCAÇÃO</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Alterna navegação">
