--- a/Retroescavadeira.html
+++ b/Retroescavadeira.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>AMC Minicarregadeira</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -69,6 +69,20 @@
         </nav>
 
     </header>
+
+    <main>
+        
+        <section class="eq-container">
+            <h1 class="eq-tittle">Retroescavadeira</h1>
+            <img class="eq-img" src="" alt="">
+            <p class="eq-content">Retroescavadeiras são equipamentos compactos, o que as torna bastante versáteis e utilizáveis na maioria das aplicações, cumprindo uma ampla variedade de tarefas: construção, pequenas demolições, transporte leve de materiais de construção, fornecimento de equipamento para construção, pequenas escavações, paisagismo,</p>
+        </section>
+
+        <section class="eq-video">
+            <h3 class="eq-video__tittle">Veja o vídeo...</h3>
+            <div class="eq-video__vid"><iframe width="560" height="315" src="https://www.youtube.com/embed/7eOot1IV5eA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        </section>
+    </main>
 
     <footer class="btn btn-primary">
         <span class="footer-text">Desenvolvido por Luiz Guerreiro em 2022</span>
