--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Retroescavadeira</h5>
                     <p class="card-text">Retroescavadeiras são equipamentos compactos, o que as torna bastante versáteis e utilizáveis na maioria das aplicações, cumprindo uma ampla variedade de tarefas: construção, pequenas demolições, transporte leve de materiais de construção, fornecimento de equipamento para construção, pequenas escavações, paisagismo, .</p>
-                    <div class="card-button"><a href="#" class="btn btn-primary">Saiba mais</a></div>
+                    <div class="card-button"><a href="./Retroescavadeira.html" class="btn btn-primary">Saiba mais</a></div>
                 </div>
             </div>
 
@@ -97,7 +97,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Escavadeira</h5>
                     <p class="card-text">A escavadeira é um equipamento utilizado para escavar e mover grandes quantidades de material, como terra, pedras e afins — representando, portanto, algo fundamental à construção civil.</p>
-                    <div class="card-button"><a href="#" class="btn btn-primary">Saiba mais</a></div>
+                    <div class="card-button"><a href="./Escavadeira.html" class="btn btn-primary">Saiba mais</a></div>
                 </div>
             </div>
 
@@ -106,7 +106,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Miniescavadeira</h5>
                     <p class="card-text">A Mini Escavadeira é um equipamento industrial de pequeno porte, o seu tamanho facilita na praticidade em diversos serviços, até mesmo em terrenos acidentados. Sua utilização auxilia na preparação do solo, escavação e remoção de entulho em locais de difícil alcance.</p>
-                    <div class="card-button"><a href="#" class="btn btn-primary">Saiba mais</a></div>
+                    <div class="card-button"><a href="./Miniescavadeira .html" class="btn btn-primary">Saiba mais</a></div>
                 </div>
             </div>
 
@@ -115,7 +115,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Carregadeira</h5>
                     <p class="card-text">Muito utilizadas em diversos segmentos, as pás carregadeiras são máquinas capazes de carregar materiais como areia, brita, terra, entulhos e minérios. Potentes e versáteis, são excelentes para trabalhos em grandes e pequenas áreas.</p>
-                    <div class="card-button"><a href="#" class="btn btn-primary">Saiba mais</a></div>
+                    <div class="card-button"><a href="./Carregadeira.html" class="btn btn-primary">Saiba mais</a></div>
                 </div>
             </div>
 
@@ -133,7 +133,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Motoniveladora</h5>
                     <p class="card-text">As motoniveladoras são capazes de deslocar lateralmente grandes quantidades de materiais e para arrumação de superfícies e terrenos inclinados. Além da lâmina, o maquinário tem escarificadores que servem para lidar com superfícies mais densas, misturando e reintegrando o novo material.</p>
-                    <div class="card-button"><a href="#" class="btn btn-primary">Saiba mais</a></div>
+                    <div class="card-button"><a href="./Motoniveladora.html" class="btn btn-primary">Saiba mais</a></div>
                 </div>
             </div>
             
@@ -142,9 +142,12 @@
     </main>
 
     <footer class="btn btn-primary">
-        <span class="footer-text">Desenvolvido por Luiz Guerreiro em 2022</span>
+        <div><span class="footer-text">Desenvolvido por Luiz Guerreiro em 2022</span>
         <a class="footer-lnk" href="https://www.linkedin.com/in/luiz-fernando-guerreiro/" target="_blank"><img class="footer-img" src="./img/icons8-linkedin-circundado-48.png" alt="icone Linkedin"></a>
-        <a class="footer-link" href="https://github.com/lfbguerreiro" target="_blank"><img class="footer-img" src="./img/icons8-github-50.png" alt="icone Github"></a>
+        <a class="footer-link" href="https://github.com/lfbguerreiro" target="_blank"><img class="footer-img" src="./img/icons8-github-50.png" alt="icone Github"></a></div>
+        <div><span class="footer-text">Desenvolvido por Ana Klara em 2022</span>
+        <a class="footer-lnk" href="https://www.linkedin.com/in/luiz-fernando-guerreiro/" target="_blank"><img class="footer-img" src="./img/icons8-linkedin-circundado-48.png" alt="icone Linkedin"></a>
+        <a class="footer-link" href="https://github.com/lfbguerreiro" target="_blank"><img class="footer-img" src="./img/icons8-github-50.png" alt="icone Github"></a></div>
     </footer>
 
 
