--- a/Escavadeira.html
+++ b/Escavadeira.html
@@ -73,14 +73,14 @@
     <main>
         
         <section class="eq-container">
-            <h1 class="eq-tittle">Minicarregadeira</h1>
+            <h1 class="eq-tittle">Escavadeira</h1>
             <img class="eq-img" src="" alt="">
-            <p class="eq-content">Muito utilizadas em diversos segmentos, as pás carregadeiras são máquinas capazes de carregar materiais como areia, brita, terra, entulhos e minérios. Potentes e versáteis, são excelentes para trabalhos em grandes e pequenas áreas.</p>
+            <p class="eq-content">A escavadeira é um equipamento utilizado para escavar e mover grandes quantidades de material, como terra, pedras e afins — representando, portanto, algo fundamental à construção civil.</p>
         </section>
 
         <section class="eq-video">
             <h3 class="eq-video__tittle">Veja o vídeo...</h3>
-            <div class="eq-video__vid"><iframe width="560" height="315" src="https://www.youtube.com/embed/HcKviCRDZy0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+            <div class="eq-video__vid"><iframe width="560" height="315" src="https://www.youtube.com/embed/bryjkfSdmEg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
         </section>
     </main>
 
