--- a/Cotação.html
+++ b/Cotação.html
@@ -71,47 +71,43 @@
     </header>
 
     <main>
-        <h1>Preencha o formulário para pedir seu orçamento</h1>
-        <form>
-  <div class="form-group row">
-    <label for="inputEmail3" class="col-sm-2 col-form-label">Seu e-mail</label>
-    <div class="col-sm-10">
-      <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
-    </div>
-  </div>
-  <div class="form-group row">
-    <label for="inputText" class="col-sm-2 col-form-label">Digite sua mensagem</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="inputText" placeholder="Digite as caracteristicas da locação como equipamento, local etc.">
-    </div>
-  </div>
-  <fieldset class="form-group">
-    <div class="row">
-      <legend class="col-form-label col-sm-2 pt-0">Período</legend>
-      <div class="col-sm-10">
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="opcao1" checked>
-          <label class="form-check-label" for="gridRadios1">
-            Diária
-          </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="opcao2">
-          <label class="form-check-label" for="gridRadios2">
-            Mensal
-          </label>
-        </div>
+        <h1 class="cotacao-tittle">Preencha o formulário para pedir seu orçamento</h1>
+        <form class="cotacao-container">
+          <div class="form-group row">
+            <label for="inputEmail3" class="col-sm-2 col-form-label">Seu e-mail</label>
+            <div class="col-sm-10">
+              <input type="email" class="form-control" id="inputEmail3" placeholder="Email">
+            </div>
+          </div>
+          <div class="form-group row">
+            <label for="inputText" class="col-sm-2 col-form-label">Digite sua mensagem</label>
+            <div class="col-sm-10">
+              <input type="text" class="form-control" id="inputText" placeholder="Digite as caracteristicas da locação como equipamento, local etc.">
+            </div>
+          </div>
+          <fieldset class="form-group">
+            <div class="row">
+              <legend class="col-form-label col-sm-2 pt-0">Período</legend>
+              <div class="col-sm-10">
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="opcao1" checked>
+                  <label class="form-check-label" for="gridRadios1"> Diária </label>
+                </div>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="opcao2">
+                  <label class="form-check-label" for="gridRadios2"> Mensal </label>
+                </div>
         
-      </div>
-    </div>
-  </fieldset>
+              </div>
+            </div>
+          </fieldset>
   
-  <div class="form-group row">
-    <div class="col-sm-10">
-      <button type="submit" class="btn btn-primary">Enviar</button>
-    </div>
-  </div>
-</form>
+          <div class="form-group row">
+            <div class="col-sm-10">
+              <button type="submit" class="btn btn-primary">Enviar</button>
+            </div>
+          </div>
+        </form>
     </main>
 
     <footer class="btn btn-primary">
