atualização do footer

--- a/index.html
+++ b/index.html
@@ -142,10 +142,10 @@
     </main>
 
     <footer class="btn btn-primary">
-        <div><span class="footer-text">Desenvolvido por Luiz Guerreiro em 2022</span>
-        <a class="footer-lnk" href="https://www.linkedin.com/in/luiz-fernando-guerreiro/" target="_blank"><img class="footer-img" src="./img/icons8-linkedin-circundado-48.png" alt="icone Linkedin"></a>
-        <a class="footer-link" href="https://github.com/lfbguerreiro" target="_blank"><img class="footer-img" src="./img/icons8-github-50.png" alt="icone Github"></a></div>
         <div><span class="footer-text">Desenvolvido por Ana Klara em 2022</span>
+        <a class="footer-lnk" href="https://www.linkedin.com/in/ana-klara-souza-1369a01a8/" target="_blank"><img class="footer-img" src="./img/icons8-linkedin-circundado-48.png" alt="icone Linkedin"></a>
+        <a class="footer-link" href="https://github.com/naklara" target="_blank"><img class="footer-img" src="./img/icons8-github-50.png" alt="icone Github"></a></div>
+        <div><span class="footer-text">Desenvolvido por Luiz Fernando Guerreiro em 2022</span>
         <a class="footer-lnk" href="https://www.linkedin.com/in/luiz-fernando-guerreiro/" target="_blank"><img class="footer-img" src="./img/icons8-linkedin-circundado-48.png" alt="icone Linkedin"></a>
         <a class="footer-link" href="https://github.com/lfbguerreiro" target="_blank"><img class="footer-img" src="./img/icons8-github-50.png" alt="icone Github"></a></div>
     </footer>
